Revert "Replace URL with URI"
This reverts commit 6bbd67e25bd05796e3e5442626257821808a6ad1.