@@ -30,7 +30,7 @@ import java.io.ByteArrayInputStream;
 import java.io.InputStream;
 import java.io.StringWriter;
 import java.net.HttpURLConnection;
-import java.net.URI;
+import java.net.URL;
 import java.util.Random;
 
 import javax.jcr.AccessDeniedException;
@@ -59,7 +59,7 @@ import org.junit.runners.Parameterized;
 /**
  * Integration test for direct binary GET/PUT via HTTP, that requires a fully working data store
  * (such as S3) for each {@link AbstractHttpBinaryIT#dataStoreFixtures() configured fixture}.
- * The data store in question must support direct GET/PUT access via a URI.
+ * The data store in question must support direct GET/PUT access via a URL.
  * 
  * Data store must be configured through e.g. aws.properties.
  *
@@ -99,7 +99,9 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
     // F1 - basic test
     @Test
     public void testUpload() throws Exception {
-        enableUpload();
+        // enable writable URL feature
+        getConfigurableHttpDataRecordProvider()
+                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
 
         final String content = getRandomString(256);
         final long size = content.getBytes("utf-8").length;
@@ -114,11 +116,11 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
         // very small test binary
         assertTrue(size < upload.getMaxPartSize());
 
-        URI uri = upload.getUploadURIs().iterator().next();
-        assertNotNull(uri);
+        URL url = upload.getUploadURLs().iterator().next();
+        assertNotNull(url);
 
-        LOG.info("- uploading binary via PUT to {}", uri.toString());
-        int code = httpPut(uri, content.getBytes().length, getTestInputStream(content));
+        LOG.info("- uploading binary via PUT to {}", url.toString());
+        int code = httpPut(url, content.getBytes().length, getTestInputStream(content));
 
         assertTrue("PUT to pre-signed S3 URL failed",
                 isSuccessfulHttpPut(code, getConfigurableHttpDataRecordProvider()));
@@ -135,7 +137,8 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
     // F3 - Multi-part upload
     @Test
     public void testMultiPartUpload() throws Exception {
-        enableUpload();
+        getConfigurableHttpDataRecordProvider()
+                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
 
         assertTrue(getAdminSession() instanceof HttpBinaryProvider);
 
@@ -149,9 +152,9 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
         String buffer = getRandomString(uploadSize);
         long uploadPartSize = uploadContext.getMaxPartSize();
         long remaining = uploadSize;
-        for (URI uri : uploadContext.getUploadURIs()) {
+        for (URL url : uploadContext.getUploadURLs()) {
             String nextPart = buffer.substring(0, (int) Math.min(uploadPartSize, remaining));
-            int code = httpPut(uri,
+            int code = httpPut(url,
                     nextPart.getBytes().length,
                     new ByteArrayInputStream(nextPart.getBytes()),
                     true);
@@ -171,8 +174,10 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
 
     // F8 - test reading getBinary().getInputStream() once uploaded
     @Test
-    public void testStreamBinaryThroughJCRAfterURIWrite() throws Exception {
-        enableUpload();
+    public void testStreamBinaryThroughJCRAfterURLWrite() throws Exception {
+        // enable writable URL feature
+        getConfigurableHttpDataRecordProvider()
+                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
 
         // 1. add binary and upload
         String content = getRandomString(256);
@@ -180,7 +185,7 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
                 FILE_PATH,
                 content.getBytes().length,
                 10);
-        int code = httpPut(upload.getUploadURIs().iterator().next(),
+        int code = httpPut(upload.getUploadURLs().iterator().next(),
                 content.getBytes().length,
                 new ByteArrayInputStream(content.getBytes()));
         assertTrue(isSuccessfulHttpPut(code, getConfigurableHttpDataRecordProvider()));
@@ -198,7 +203,8 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
     // F10 - GET Binary when created via repo
     @Test
     public void testGetBinary() throws Exception {
-        enableDownload();
+        getConfigurableHttpDataRecordProvider()
+                .setHttpDownloadURLExpirySeconds(REGULAR_READ_EXPIRY);
 
         // Must be larger than the minimum file size, to keep it from being inlined in the node store.
         String content = getRandomString(1024*20);
@@ -206,40 +212,43 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
 
         waitForUploads();
 
-        URI downloadURI = ((HttpBinaryProvider) getAdminSession()).getHttpDownloadURI(writeBinary);
+        URL downloadURL = ((HttpBinaryProvider) getAdminSession()).getHttpDownloadURL(writeBinary);
         StringWriter writer = new StringWriter();
-        IOUtils.copy(httpGet(downloadURI), writer, "utf-8");
+        IOUtils.copy(httpGet(downloadURL), writer, "utf-8");
         assertEquals(content, writer.toString());
     }
 
     // F9 - GET Binary for binary after write using direct PUT
     @Test
     public void testGetBinaryAfterPut() throws Exception {
-        enableUpload();
-        enableDownload();
+        // enable writable and readable URL feature
+        ConfigurableHttpDataRecordProvider provider = getConfigurableHttpDataRecordProvider();
+        provider.setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
+        provider.setHttpDownloadURLExpirySeconds(REGULAR_READ_EXPIRY);
 
         // 1. add binary and upload
         String content = getRandomString(256);
         HttpBinaryProvider binaryProvider = (HttpBinaryProvider) getAdminSession();
         HttpBinaryUpload upload = binaryProvider.initiateHttpUpload(BINARY_PATH, content.getBytes().length, 10);
-        int code = httpPut(upload.getUploadURIs().iterator().next(),
+        int code = httpPut(upload.getUploadURLs().iterator().next(),
                 content.getBytes().length,
                 new ByteArrayInputStream(content.getBytes()));
         assertTrue(isSuccessfulHttpPut(code, getConfigurableHttpDataRecordProvider()));
         Binary writeBinary = binaryProvider.completeHttpUpload(upload.getUploadToken());
 
-        // 2. read binary, get the URI
-        URI downloadURI = binaryProvider.getHttpDownloadURI(writeBinary);
+        // 2. read binary, get the URL
+        URL downloadURL = binaryProvider.getHttpDownloadURL(writeBinary);
         StringWriter writer = new StringWriter();
-        IOUtils.copy(httpGet(downloadURI), writer, "utf-8");
+        IOUtils.copy(httpGet(downloadURL), writer, "utf-8");
 
-        // 3. GET on URI and verify contents are the same
+        // 3. GET on URL and verify contents are the same
         assertEquals(content, writer.toString());
     }
 
     @Test
     public void testGetSmallBinaryReturnsNull() throws Exception {
-        enableUpload();
+        getConfigurableHttpDataRecordProvider()
+                .setHttpDownloadURLExpirySeconds(REGULAR_READ_EXPIRY);
 
         // Must be smaller than the minimum file size, (inlined binary)
         String content = getRandomString(256);
@@ -247,15 +256,17 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
 
         waitForUploads();
 
-        URI downloadURI = ((HttpBinaryProvider) getAdminSession()).getHttpDownloadURI(writeBinary);
-        assertNull(downloadURI);
+        URL downloadURL = ((HttpBinaryProvider) getAdminSession()).getHttpDownloadURL(writeBinary);
+        assertNull(downloadURL);
     }
 
     // A6 - Client MUST only get permission to add a blob referenced in a JCR binary property
     //      where the user has JCR set_property permission.
     @Test
     public void testUnprivilegedSessionCannotUploadBinary() throws Exception {
-        enableUpload();
+        // enable writable URL feature
+        getConfigurableHttpDataRecordProvider()
+                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
 
         try {
             ((HttpBinaryProvider) getAnonymousSession()).initiateHttpUpload(BINARY_PATH, 1024*20, 10);
@@ -264,37 +275,41 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
         catch (AccessDeniedException e) { }
     }
 
-    // A2 - disable write URIs entirely
+    // A2 - disable write URLs entirely
     @Test
     public void testDisableDirectHttpUpload() throws Exception {
-        disableUpload();
+        // disable in data store config by setting expiry to zero
+        getConfigurableHttpDataRecordProvider()
+                .setHttpUploadURLExpirySeconds(0);
 
         String content = getRandomString(256);
         HttpBinaryUpload upload = ((HttpBinaryProvider) getAdminSession()).initiateHttpUpload(BINARY_PATH, content.getBytes().length, 10);
 
         assertNotNull(upload);
-        assertEquals(0, upload.getUploadURIs().size());
+        assertEquals(0, upload.getUploadURLs().size());
     }
 
-    // A2 - disable get URIs entirely
+    // A2 - disable get URLs entirely
     @Test
     public void testDisableDirectHttpDownload() throws Exception {
-        disableDownload();
+        getConfigurableHttpDataRecordProvider()
+                .setHttpDownloadURLExpirySeconds(0);
 
         String content = getRandomString(1024*20);
         Binary writeBinary = createFileWithBinary(getAdminSession(), FILE_PATH, new ByteArrayInputStream(content.getBytes()));
 
         waitForUploads();
 
-        URI downloadURI = ((HttpBinaryProvider) getAdminSession()).getHttpDownloadURI(writeBinary);
-        assertNull(downloadURI);
+        URL downloadURL = ((HttpBinaryProvider) getAdminSession()).getHttpDownloadURL(writeBinary);
+        assertNull(downloadURL);
     }
 
     // A2/A3 - configure short expiry time, wait, ensure upload fails after expired
     @Test
-    public void testPutURIExpires() throws Exception {
+    public void testPutURLExpires() throws Exception {
         // short timeout
-        configureUpload(1);
+        getConfigurableHttpDataRecordProvider()
+                .setHttpUploadURLExpirySeconds(1);
 
         String content = getRandomString(1024*20);
         HttpBinaryUpload upload = ((HttpBinaryProvider) getAdminSession()).initiateHttpUpload(BINARY_PATH, content.getBytes().length, 10);
@@ -303,7 +318,7 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
         Thread.sleep(2 * SECONDS);
 
         // ensure PUT fails with 403 or anything 400+
-        assertTrue(httpPutTestStream(upload.getUploadURIs().iterator().next()) > HttpURLConnection.HTTP_BAD_REQUEST);
+        assertTrue(httpPutTestStream(upload.getUploadURLs().iterator().next()) > HttpURLConnection.HTTP_BAD_REQUEST);
     }
 
     // F2 - CDN & transfer accelerators (S3 only for now)
@@ -312,79 +327,85 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
         ConfigurableHttpDataRecordProvider provider = getConfigurableHttpDataRecordProvider();
         if (provider instanceof S3DataStore) {
             // This test is S3 specific for now
-            enableUpload();
-            enableDownload();
+            provider.setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
+            provider.setHttpDownloadURLExpirySeconds(REGULAR_READ_EXPIRY);
             provider.setBinaryTransferAccelerationEnabled(true);
 
             HttpBinaryUpload upload = ((HttpBinaryProvider) getAdminSession()).initiateHttpUpload(BINARY_PATH,1024*20, 1);
-            URI uri = upload.getUploadURIs().iterator().next();
-            assertNotNull(uri);
+            URL url = upload.getUploadURLs().iterator().next();
+            assertNotNull(url);
 
-            LOG.info("accelerated URL: {}", uri.toString());
-            assertTrue(uri.getHost().endsWith(".s3-accelerate.amazonaws.com"));
+            LOG.info("accelerated URL: {}", url.toString());
+            assertTrue(url.getHost().endsWith(".s3-accelerate.amazonaws.com"));
 
             provider.setBinaryTransferAccelerationEnabled(false);
             upload = ((HttpBinaryProvider) getAdminSession()).initiateHttpUpload(BINARY_PATH,1024*20, 1);
-            uri = upload.getUploadURIs().iterator().next();
-            assertNotNull(uri);
+            url = upload.getUploadURLs().iterator().next();
+            assertNotNull(url);
 
-            LOG.info("non-accelerated URL: {}", uri.toString());
-            assertFalse(uri.getHost().endsWith(".s3-accelerate.amazonaws.com"));
+            LOG.info("non-accelerated URL: {}", url.toString());
+            assertFalse(url.getHost().endsWith(".s3-accelerate.amazonaws.com"));
         }
     }
 
-    // A1 - get put URI, change it and try uploading it
+    // A1 - get put url, change it and try uploading it
     @Test
-    public void testModifiedPutURIFails() throws Exception {
-        enableUpload();
+    public void testModifiedPutURLFails() throws Exception {
+        // enable writable URL feature
+        getConfigurableHttpDataRecordProvider()
+                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
         String content = getRandomString(1024*20);
         HttpBinaryUpload upload = ((HttpBinaryProvider) getAdminSession()).initiateHttpUpload(BINARY_PATH, content.getBytes().length, 1);
-        URI uri = upload.getUploadURIs().iterator().next();
-        URI changedUri = new URI(
+        URL url = upload.getUploadURLs().iterator().next();
+        URL changedUrl = new URL(
                 String.format("%s://%s/%sX?%s",  // NOTE the injected "X" in the URL filename
-                        uri.getScheme(),
-                        uri.getHost(),
-                        uri.getPath(),
-                        uri.getQuery())
+                url.getProtocol(),
+                url.getHost(),
+                url.getPath(),
+                url.getQuery())
         );
-        int code = httpPut(changedUri, content.getBytes().length, new ByteArrayInputStream(content.getBytes()));
+        int code = httpPut(changedUrl, content.getBytes().length, new ByteArrayInputStream(content.getBytes()));
         assertTrue(isFailedHttpPut(code));
     }
 
-    // A1 - get put uri, upload, then try reading from the same uri
+    // A1 - get put url, upload, then try reading from the same url
     @Test
-    public void testCannotReadFromPutURI() throws Exception {
-        enableUpload();
-        enableDownload();
+    public void testCannotReadFromPutURL() throws Exception {
+        // enable writable URL and readable URL feature
+        ConfigurableHttpDataRecordProvider provider = getConfigurableHttpDataRecordProvider();
+        provider.setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
+        provider.setHttpDownloadURLExpirySeconds(REGULAR_READ_EXPIRY);
 
         String content = getRandomString(1024*20);
         HttpBinaryUpload upload = ((HttpBinaryProvider) getAdminSession()).initiateHttpUpload(BINARY_PATH, content.getBytes().length, 1);
-        URI uri = upload.getUploadURIs().iterator().next();
-        int code = httpPut(uri, content.getBytes().length, new ByteArrayInputStream(content.getBytes()));
+        URL url = upload.getUploadURLs().iterator().next();
+        int code = httpPut(url, content.getBytes().length, new ByteArrayInputStream(content.getBytes()));
         assertTrue(isSuccessfulHttpPut(code, getConfigurableHttpDataRecordProvider()));
 
-        HttpURLConnection conn = (HttpURLConnection) uri.toURL().openConnection();
+        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         code = conn.getResponseCode();
         assertTrue(isFailedHttpPut(code));
     }
 
-    // A1 - add binary via JCR, then get put uri, and modify to try to upload over first binary
+    // A1 - add binary via JCR, then get put url, and modify to try to upload over first binary
     @Test
-    public void testCannotModifyExistingBinaryViaPutURI() throws Exception {
-        enableUpload();
-        enableDownload();
+    public void testCannotModifyExistingBinaryViaPutURL() throws Exception {
+        // enable writable URL and readable URL feature
+        ConfigurableHttpDataRecordProvider provider = getConfigurableHttpDataRecordProvider();
+        provider.setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
+        provider.setHttpDownloadURLExpirySeconds(REGULAR_READ_EXPIRY);
 
         String content = getRandomString(1024*20);
         Binary writeBinary = createFileWithBinary(getAdminSession(), FILE_PATH, new ByteArrayInputStream(content.getBytes()));
 
         waitForUploads();
 
-        URI downloadURI = ((HttpBinaryProvider) getAdminSession()).getHttpDownloadURI(writeBinary);
-        assertNotNull(downloadURI);
+        URL downloadURL = ((HttpBinaryProvider) getAdminSession()).getHttpDownloadURL(writeBinary);
+        assertNotNull(downloadURL);
 
         String moreContent = getRandomString(1024*20);
         HttpBinaryUpload upload = ((HttpBinaryProvider) getAdminSession()).initiateHttpUpload(BINARY_PATH, moreContent.getBytes().length, 1);
-        HttpURLConnection conn = (HttpURLConnection) downloadURI.toURL().openConnection();
+        HttpURLConnection conn = (HttpURLConnection) downloadURL.openConnection();
         conn.setRequestMethod("PUT");
         conn.setDoOutput(true);
         IOUtils.copy(new ByteArrayInputStream(moreContent.getBytes()), conn.getOutputStream());
@@ -393,19 +414,20 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
         assertTrue(isFailedHttpPut(code));
 
         StringWriter writer = new StringWriter();
-        IOUtils.copy(httpGet(downloadURI), writer, "utf-8");
+        IOUtils.copy(httpGet(downloadURL), writer, "utf-8");
         assertEquals(content, writer.toString());
     }
 
     // D1 - immutable after initial upload
     @Test
     public void testUploadedBinaryIsImmutable() throws Exception {
-        enableUpload();
-
+        // enable writable URL feature
+        getConfigurableHttpDataRecordProvider()
+                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
         String content = getRandomString(1024*20);
         HttpBinaryUpload upload = ((HttpBinaryProvider) getAdminSession()).initiateHttpUpload(BINARY_PATH, content.getBytes().length, 1);
         assertNotNull(upload);
-        int code = httpPut(upload.getUploadURIs().iterator().next(),
+        int code = httpPut(upload.getUploadURLs().iterator().next(),
                 content.getBytes().length,
                 new ByteArrayInputStream(content.getBytes()));
         assertTrue(isSuccessfulHttpPut(code, getConfigurableHttpDataRecordProvider()));
@@ -417,7 +439,7 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
         String moreContent = getRandomString(1024*21);
         upload = ((HttpBinaryProvider) getAdminSession()).initiateHttpUpload(BINARY_PATH, moreContent.getBytes().length, 1);
         assertNotNull(upload);
-        code = httpPut(upload.getUploadURIs().iterator().next(),
+        code = httpPut(upload.getUploadURLs().iterator().next(),
                 content.getBytes().length,
                 new ByteArrayInputStream(moreContent.getBytes()));
         assertTrue(isSuccessfulHttpPut(code, getConfigurableHttpDataRecordProvider()));
@@ -436,27 +458,26 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
     public void testUploadPathsAreUnique() throws Exception {
         // Every upload destination should be unique with no regard to file content
         // The content is not read by the Oak code so no deduplication can be performed
-
-        enableUpload();
-
+        getConfigurableHttpDataRecordProvider()
+                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
         String content = getRandomString(1024*20);
         HttpBinaryUpload upload1 = ((HttpBinaryProvider) getAdminSession()).initiateHttpUpload(BINARY_PATH, content.getBytes().length, 1);
         assertNotNull(upload1);
         HttpBinaryUpload upload2 = ((HttpBinaryProvider) getAdminSession()).initiateHttpUpload(BINARY_PATH, content.getBytes().length, 1);
         assertNotNull(upload2);
 
-        assertNotEquals(upload1.getUploadURIs().iterator().next().toString(),
-                upload2.getUploadURIs().iterator().next().toString());
+        assertNotEquals(upload1.getUploadURLs().iterator().next().toString(),
+                upload2.getUploadURLs().iterator().next().toString());
     }
 
     // D3 - do not delete directly => copy nt:file node, delete one, ensure binary still there
     @Test
     public void testBinaryNotDeletedWithNode() throws Exception {
-        enableUpload();
-
+        getConfigurableHttpDataRecordProvider()
+                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
         String content = getRandomString(1024*20);
         HttpBinaryUpload upload = ((HttpBinaryProvider) getAdminSession()).initiateHttpUpload(BINARY_PATH, content.getBytes().length, 1);
-        int code = httpPut(upload.getUploadURIs().iterator().next(),
+        int code = httpPut(upload.getUploadURLs().iterator().next(),
                 content.getBytes().length,
                 new ByteArrayInputStream(content.getBytes()));
         assertTrue(isSuccessfulHttpPut(code, getConfigurableHttpDataRecordProvider()));
@@ -479,8 +500,8 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
     // D5 - blob ref not persisted in nodestore until binary uploaded and immutable
     @Test
     public void testBinaryOnlyPersistedInNodeStoreAfterUploadIsCompleted() throws Exception {
-        enableUpload();
-
+        getConfigurableHttpDataRecordProvider()
+                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
         String content = getRandomString(1024*20);
 
         getOrCreateNtFile(getAdminSession(), FILE_PATH);
@@ -500,7 +521,7 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
         }
         catch (PathNotFoundException e) { }
 
-        int code = httpPut(upload.getUploadURIs().iterator().next(),
+        int code = httpPut(upload.getUploadURLs().iterator().next(),
                 content.getBytes().length,
                 new ByteArrayInputStream(content.getBytes()));
         assertTrue(isSuccessfulHttpPut(code, getConfigurableHttpDataRecordProvider()));
@@ -532,8 +553,8 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
 
     @Test
     public void testInitiateHttpUploadWithZeroSizeFails() throws RepositoryException {
-        enableUpload();
-
+        getConfigurableHttpDataRecordProvider()
+                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
         try {
             ((HttpBinaryProvider) getAdminSession())
                     .initiateHttpUpload(BINARY_PATH,0, 1);
@@ -545,9 +566,9 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
     }
 
     @Test
-    public void testInitiateHttpUploadWithZeroURIsFails() throws RepositoryException {
-        enableUpload();
-
+    public void testInitiateHttpUploadWithZeroUrlsFails() throws RepositoryException {
+        getConfigurableHttpDataRecordProvider()
+                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
         try {
             ((HttpBinaryProvider) getAdminSession()).initiateHttpUpload(BINARY_PATH, 1024 * 20, 0);
             fail();
@@ -558,13 +579,13 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
     }
 
     @Test
-    public void testInitiateHttpUploadWithUnlimitedURIs() throws RepositoryException {
-        enableUpload();
-
+    public void testInitiateHttpUploadWithUnlimitedUrls() throws RepositoryException {
+        getConfigurableHttpDataRecordProvider()
+                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
         HttpBinaryUpload upload = ((HttpBinaryProvider) getAdminSession())
                 .initiateHttpUpload(BINARY_PATH,1024 * 1024 * 1024, -1);
         assertNotNull(upload);
-        assertTrue(upload.getUploadURIs().size() > 50);
+        assertTrue(upload.getUploadURLs().size() > 50);
         // 50 is our default expected client max -
         // this is to make sure we will give as many as needed
         // if the client doesn't specify their own limit
@@ -572,18 +593,18 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
 
     @Test
     public void testInitiateHttpUploadLargeSinglePut() throws RepositoryException {
-        enableUpload();
-
+        getConfigurableHttpDataRecordProvider()
+                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
         HttpBinaryUpload upload = ((HttpBinaryProvider) getAdminSession())
                 .initiateHttpUpload(BINARY_PATH,1024 * 1024 * 100, 1);
         assertNotNull(upload);
-        assertEquals(1, upload.getUploadURIs().size());
+        assertEquals(1, upload.getUploadURLs().size());
     }
 
     @Test
     public void testInitiateHttpUploadTooLargeForSinglePut() throws RepositoryException {
-        enableUpload();
-
+        getConfigurableHttpDataRecordProvider()
+                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
         try {
             ((HttpBinaryProvider) getAdminSession())
                     .initiateHttpUpload(BINARY_PATH,1024L * 1024L * 1024L * 10L, 1);
@@ -596,8 +617,8 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
 
     @Test
     public void testInitiateHttpUploadTooLargeForUpload() throws RepositoryException {
-        enableUpload();
-
+        getConfigurableHttpDataRecordProvider()
+                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
         try {
             ((HttpBinaryProvider) getAdminSession())
                     .initiateHttpUpload(BINARY_PATH, 1024L * 1024L * 1024L * 1024L * 10L, -1);
@@ -609,9 +630,9 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
     }
 
     @Test
-    public void testInitiateHttpUploadTooLargeForRequestedNumURIs() throws RepositoryException {
-        enableUpload();
-
+    public void testInitiateHttpUploadTooLargeForRequestedNumUrls() throws RepositoryException {
+        getConfigurableHttpDataRecordProvider()
+                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
         try {
             ((HttpBinaryProvider) getAdminSession())
                     .initiateHttpUpload(BINARY_PATH, 1024L * 1024L * 1024L * 10L, 10);
@@ -624,7 +645,8 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
 
     @Test
     public void testCompleteHttpUploadWithInvalidTokenFails() throws RepositoryException {
-        enableUpload();
+        getConfigurableHttpDataRecordProvider()
+                .setHttpUploadURLExpirySeconds(REGULAR_WRITE_EXPIRY);
 
         HttpBinaryUpload upload = ((HttpBinaryProvider) getAdminSession())
                 .initiateHttpUpload(BINARY_PATH, 256, 10);
@@ -637,36 +659,6 @@ public class HttpBinaryIT extends AbstractHttpBinaryIT {
     }
 
     // -----------------------------------------------------------------< helpers >--------------
-
-    private ConfigurableHttpDataRecordProvider enableUpload() throws RepositoryException {
-        return configureUpload(REGULAR_WRITE_EXPIRY);
-    }
-
-    private ConfigurableHttpDataRecordProvider disableUpload() throws RepositoryException {
-        return configureUpload(0);
-    }
-
-    private ConfigurableHttpDataRecordProvider configureUpload(int expiry) throws RepositoryException {
-        ConfigurableHttpDataRecordProvider provider =
-                getConfigurableHttpDataRecordProvider();
-        provider.setHttpUploadURIExpirySeconds(expiry);
-        return provider;
-    }
-
-    private ConfigurableHttpDataRecordProvider enableDownload() throws RepositoryException {
-        return configureDownload(REGULAR_READ_EXPIRY);
-    }
-
-    private ConfigurableHttpDataRecordProvider disableDownload() throws RepositoryException {
-        return configureDownload(0);
-    }
-
-    private ConfigurableHttpDataRecordProvider configureDownload(int expiry) throws RepositoryException {
-        ConfigurableHttpDataRecordProvider provider =
-                getConfigurableHttpDataRecordProvider();
-        provider.setHttpDownloadURIExpirySeconds(expiry);
-        return provider;
-    }
 
     private Node getOrCreateNtFile(Session session, String path) throws RepositoryException {
         if (session.nodeExists(path + "/" + JcrConstants.JCR_CONTENT)) {
